--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.0.10",
+    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^4.35.3",
+    "@trpc/client": "^10.38.4",
+    "@trpc/next": "^10.38.4",
+    "@trpc/react-query": "^10.38.4",
+    "@trpc/server": "^10.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
